--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+  "browserslist": [
+  "> 0.5%",
+  "last 2 versions",
+  "not dead"
+],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
